# dumpster

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
.github/workflows/: rust.yml
dumpster/: Cargo.toml  loom.json
dumpster/src/: collect.rs  impls.rs  lib.rs  option.rs  ptr.rs  tests.rs
dumpster/src/sync/: cell.rs  collect.rs  loom_ext.rs  loom_tests.rs  mod.rs  ptr.rs  tests.rs
dumpster/src/unsync/: collect.rs  mod.rs  tests.rs
dumpster_bench/: Cargo.toml
dumpster_bench/scripts/: make_plots.py
dumpster_bench/src/: lib.rs  main.rs
dumpster_derive/: Cargo.toml
dumpster_derive/src/: lib.rs
dumpster_test/: Cargo.toml
dumpster_test/src/: lib.rs
src/: lib.rs  tests.rs
