[package]
name = "dumpster"
version = "1.0.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Clayton Ramsey"]
description = "A concurrent cycle-tracking garbage collector."
repository = "https://github.com/claytonwramsey/dumpster"
readme = "../README.md"
keywords = ["dumpster", "garbage_collector", "gc"]
categories = ["memory-management", "data-structures"]

[features]
default = ["derive"]
coerce-unsized = []
derive = ["dep:dumpster_derive"]

[dependencies]
parking_lot = "0.12"
dumpster_derive = { version = "1.0.0", path = "../dumpster_derive", optional = true }

[dev-dependencies]
fastrand = "2.0.0"

[package.metadata.playground]
features = ["derive"]

[package.metadata.docs.rs]
features = ["derive"]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
