[package]
name = "dumpster"
version = "1.1.1"
edition = "2021"
license = "MPL-2.0"
authors = ["Clayton Ramsey"]
description = "A concurrent cycle-tracking garbage collector."
repository = "https://github.com/claytonwramsey/dumpster"
readme = "../README.md"
keywords = ["dumpster", "garbage_collector", "gc"]
categories = ["memory-management", "data-structures"]

[features]
default = ["derive"]
coerce-unsized = []
derive = ["dep:dumpster_derive"]
either = ["dep:either"]

[dependencies]
parking_lot = "0.12.3"
dumpster_derive = { version = "1.1.0", path = "../dumpster_derive", optional = true }
either = { version = "1.13.0", optional = true }
foldhash = "0.2.0"

[target.'cfg(loom)'.dependencies]
loom = "0.7.2"

[dev-dependencies]
fastrand = "2.0.0"
loom = { version = "0.7.2", features = ["checkpoint"] }

[package.metadata.playground]
features = ["derive"]

[package.metadata.docs.rs]
features = ["derive"]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
