[package]
name = "dumpster_bench"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Clayton Ramsey"]
description = "Benchmark for dumpster garbage collection crate"
repository = "https://github.com/claytonwramsey/dumpster"
readme = "../README.md"
keywords = ["dumpster", "garbage_collector", "benchmark"]
categories = ["data-structures", "memory-management"]

[dependencies]
dumpster = { version = "1.1.0", path = "../dumpster", features = ["derive"] }
gc = "0.5.0"
bacon_rajan_cc = "0.4.0"
fastrand = "2.0.0"
shredder = "0.2.0"
shredder_derive = "0.2.0"
parking_lot = "0.12.3"
rust-cc = "0.6.2"
tracing-rc = { version = "0.2.0", default-features = false, features = [
    "sync",
] }
