[package]
name = "dumpster_derive"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Clayton Ramsey"]
description = "Derive macros for dumpster garbage collection crate"
repository = "https://github.com/claytonwramsey/dumpster"
readme = "../README.md"
keywords = ["dumpster", "garbage collector", "derive"]
categories = ["data-structures", "memory-management"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1.0"
syn = "2.0"
dumpster = {version = "0.1.0", path = "../dumpster"}
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html