[package]
name = "dumpster_derive"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Clayton Ramsey"]
description = "Implementation of #[derive(Collectable)] for dumpster"
repository = "https://github.com/claytonwramsey/dumpster"
readme = "../README.md"
keywords = ["dumpster", "garbage_collector", "derive", "gc"]
categories = [ "memory-management", "data-structures"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1.0"
syn = "2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html